--- a/views/product.ejs
+++ b/views/product.ejs
@@ -31,7 +31,11 @@
 				<div class="col-12 col-lg-4">
 					<section class="comments">
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<div class="icono-usuario-comentario">
+								<i class="far fa-user"></i>
+							</div>
+						<!--	<img src="https://via.placeholder.com/35" alt="">-->
+
 							<div class="data">
 								<p class="user">
 								<strong> <a href="/profile"> Lucia Perez </a> </strong>
@@ -42,7 +46,10 @@
 							</div>
 						</article>
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<div class="icono-usuario-comentario">
+								<i class="far fa-user"></i>
+							</div>
+							<!--<!<img src="https://via.placeholder.com/35" alt="">-->
 							<div class="data">
 								<p class="user">
 									<strong> <a href="/profile"> Ignacio Apela </a> </strong>
@@ -50,7 +57,9 @@
 							</div>
 						</article>
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<div class="icono-usuario-comentario">
+								<i class="far fa-user"></i>
+							</div>
 							<div class="data">
 								<p class="user">
 									<strong> <a href="/profile"> Miranda Valdez</a> </strong>
@@ -59,7 +68,9 @@
 							</div>
 						</article>
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<div class="icono-usuario-comentario">
+								<i class="far fa-user"></i>
+							</div>
 							<div class="data">
 								<p class="user">
 									<strong> <a href="/profile"> Marcelo Torcuato </a> </strong>
@@ -67,7 +78,9 @@
 							</div>
 						</article>
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<div class="icono-usuario-comentario">
+								<i class="far fa-user"></i>
+							</div>
 							<div class="data">
 								<p class="user">
 									<strong> <a href="/profile"> Eric Sartre </a> </strong>
@@ -105,7 +118,9 @@
 					<div class="col-12 col-lg-4">
 						<section class="comments">
 							<article>
-								<img src="https://via.placeholder.com/35" alt="">
+								<div class="icono-usuario-comentario">
+									<i class="far fa-user"></i>
+								</div>
 								<div class="data">
 									<p class="user">
 									<strong> <a href="/profile">Lucas Sanchez </a> </strong>
@@ -113,7 +128,9 @@
 								</div>
 							</article>
 							<article>
-								<img src="https://via.placeholder.com/35" alt="">
+								<div class="icono-usuario-comentario">
+									<i class="far fa-user"></i>
+								</div>
 								<div class="data">
 									<p class="user">
 										<strong> <a href="/profile"> Marisol Orio </a> </strong>
@@ -121,7 +138,9 @@
 								</div>
 							</article>
 							<article>
-								<img src="https://via.placeholder.com/35" alt="">
+								<div class="icono-usuario-comentario">
+									<i class="far fa-user"></i>
+								</div>
 								<div class="data">
 									<p class="user">
 										<strong> <a href="/profile"> Bautista Sanchez </a> </strong>
@@ -130,7 +149,9 @@
 								</div>
 							</article>
 							<article>
-								<img src="https://via.placeholder.com/35" alt="">
+								<div class="icono-usuario-comentario">
+									<i class="far fa-user"></i>
+								</div>
 								<div class="data">
 									<p class="user">
 										<strong> <a href="/profile"> Santos Chismech </a> </strong>
@@ -138,7 +159,9 @@
 								</div>
 							</article>
 							<article>
-								<img src="https://via.placeholder.com/35" alt="">
+								<div class="icono-usuario-comentario">
+									<i class="far fa-user"></i>
+								</div>
 								<div class="data">
 									<p class="user">
 										<strong> <a href="/profile"> Miguel Prado </a> </strong>
@@ -176,7 +199,9 @@
 				<div class="col-12 col-lg-4">
 					<section class="comments">
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<div class="icono-usuario-comentario">
+								<i class="far fa-user"></i>
+							</div>
 							<div class="data">
 								<p class="user">
 								<strong> <a href="/profile"> Marcos Tortielo</a> </strong>
@@ -184,7 +209,9 @@
 							</div>
 						</article>
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<div class="icono-usuario-comentario">
+								<i class="far fa-user"></i>
+							</div>
 							<div class="data">
 								<p class="user">
 									<strong> <a href="/profile"> Delfina Mirasol</a> </strong>
@@ -192,7 +219,9 @@
 							</div>
 						</article>
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<div class="icono-usuario-comentario">
+								<i class="far fa-user"></i>
+							</div>
 							<div class="data">
 								<p class="user">
 									<strong> <a href="/profile"> Carlos Carmen</a> </strong>
@@ -201,7 +230,9 @@
 							</div>
 						</article>
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<div class="icono-usuario-comentario">
+								<i class="far fa-user"></i>
+							</div>
 							<div class="data">
 								<p class="user">
 									<strong> <a href="/profile"> Marina Lafourcade </a> </strong>
@@ -209,7 +240,9 @@
 							</div>
 						</article>
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<div class="icono-usuario-comentario">
+								<i class="far fa-user"></i>
+							</div>
 							<div class="data">
 								<p class="user">
 									<strong> <a href="/profile"> Indira Josefa </a> </strong>
@@ -247,7 +280,9 @@
 					<div class="col-12 col-lg-4">
 						<section class="comments">
 							<article>
-								<img src="https://via.placeholder.com/35" alt="">
+								<div class="icono-usuario-comentario">
+									<i class="far fa-user"></i>
+								</div>
 								<div class="data">
 									<p class="user">
 									<strong> <a href="/profile"> Camila Busneli </a> </strong>
@@ -255,7 +290,9 @@
 								</div>
 							</article>
 							<article>
-								<img src="https://via.placeholder.com/35" alt="">
+								<div class="icono-usuario-comentario">
+									<i class="far fa-user"></i>
+								</div>
 								<div class="data">
 									<p class="user">
 										<strong> <a href="/profile"> Natalia Sliped </a> </strong>
@@ -263,7 +300,9 @@
 								</div>
 							</article>
 							<article>
-								<img src="https://via.placeholder.com/35" alt="">
+								<div class="icono-usuario-comentario">
+									<i class="far fa-user"></i>
+								</div>
 								<div class="data">
 									<p class="user">
 										<strong> <a href="/profile"> Benjamin Reynoso </a> </strong>
@@ -272,7 +311,9 @@
 								</div>
 							</article>
 							<article>
-								<img src="https://via.placeholder.com/35" alt="">
+								<div class="icono-usuario-comentario">
+									<i class="far fa-user"></i>
+								</div>
 								<div class="data">
 									<p class="user">
 										<strong> <a href="/profile"> Lisandro Karz </a> </strong>
@@ -280,7 +321,9 @@
 								</div>
 							</article>
 							<article>
-								<img src="https://via.placeholder.com/35" alt="">
+								<div class="icono-usuario-comentario">
+									<i class="far fa-user"></i>
+								</div>
 								<div class="data">
 									<p class="user">
 										<strong> <a href="/profile"> Paola Petruch </a> </strong>
@@ -318,7 +361,9 @@
 				<div class="col-12 col-lg-4">
 					<section class="comments">
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<div class="icono-usuario-comentario">
+								<i class="far fa-user"></i>
+							</div>
 							<div class="data">
 								<p class="user">
 								<strong> <a href="/profile">Silvestre Linguin </a> </strong>
@@ -326,7 +371,9 @@
 							</div>
 						</article>
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<div class="icono-usuario-comentario">
+								<i class="far fa-user"></i>
+							</div>
 							<div class="data">
 								<p class="user">
 									<strong> <a href="/profile">Nombre usuario: </a> </strong>
@@ -334,7 +381,9 @@
 							</div>
 						</article>
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<div class="icono-usuario-comentario">
+								<i class="far fa-user"></i>
+							</div>
 							<div class="data">
 								<p class="user">
 									<strong> <a href="/profile">Nombre usuario: </a> </strong>
@@ -343,7 +392,9 @@
 							</div>
 						</article>
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<div class="icono-usuario-comentario">
+								<i class="far fa-user"></i>
+							</div>
 							<div class="data">
 								<p class="user">
 									<strong> <a href="/profile">Nombre usuario: </a> </strong>
@@ -351,7 +402,9 @@
 							</div>
 						</article>
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<	<div class="icono-usuario-comentario">
+								<i class="far fa-user"></i>
+							</div>
 							<div class="data">
 								<p class="user">
 									<strong> <a href="/profile">Nombre usuario: </a> </strong>
@@ -390,7 +443,9 @@
 					<div class="col-12 col-lg-4">
 						<section class="comments">
 							<article>
-								<img src="https://via.placeholder.com/35" alt="">
+								<div class="icono-usuario-comentario">
+									<i class="far fa-user"></i>
+								</div>
 								<div class="data">
 									<p class="user">
 									<strong> <a href="/profile">Nombre usuario: </a> </strong>
@@ -398,7 +453,9 @@
 								</div>
 							</article>
 							<article>
-								<img src="https://via.placeholder.com/35" alt="">
+								<div class="icono-usuario-comentario">
+									<i class="far fa-user"></i>
+								</div>
 								<div class="data">
 									<p class="user">
 										<strong> <a href="/profile">Nombre usuario: </a> </strong>
@@ -406,7 +463,9 @@
 								</div>
 							</article>
 							<article>
-								<img src="https://via.placeholder.com/35" alt="">
+								<div class="icono-usuario-comentario">
+									<i class="far fa-user"></i>
+								</div>
 								<div class="data">
 									<p class="user">
 										<strong> <a href="/profile">Nombre usuario: </a> </strong>
@@ -415,7 +474,9 @@
 								</div>
 							</article>
 							<article>
-								<img src="https://via.placeholder.com/35" alt="">
+								<div class="icono-usuario-comentario">
+									<i class="far fa-user"></i>
+								</div>
 								<div class="data">
 									<p class="user">
 										<strong> <a href="/profile">Nombre usuario: </a> </strong>
@@ -423,7 +484,9 @@
 								</div>
 							</article>
 							<article>
-								<img src="https://via.placeholder.com/35" alt="">
+								<div class="icono-usuario-comentario">
+									<i class="far fa-user"></i>
+								</div>
 								<div class="data">
 									<p class="user">
 										<strong> <a href="/profile">Nombre usuario: </a> </strong>
@@ -462,7 +525,9 @@
 				<div class="col-12 col-lg-4">
 					<section class="comments">
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<div class="icono-usuario-comentario">
+								<i class="far fa-user"></i>
+							</div>
 							<div class="data">
 								<p class="user">
 								<strong> <a href="/profile">Nombre usuario: </a> </strong>
@@ -470,7 +535,9 @@
 							</div>
 						</article>
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<div class="icono-usuario-comentario">
+								<i class="far fa-user"></i>
+							</div>
 							<div class="data">
 								<p class="user">
 									<strong> <a href="/profile">Nombre usuario: </a> </strong>
@@ -478,7 +545,9 @@
 							</div>
 						</article>
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<div class="icono-usuario-comentario">
+								<i class="far fa-user"></i>
+							</div>
 							<div class="data">
 								<p class="user">
 									<strong> <a href="/profile">Nombre usuario: </a> </strong>
@@ -487,7 +556,9 @@
 							</div>
 						</article>
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<div class="icono-usuario-comentario">
+								<i class="far fa-user"></i>
+							</div>
 							<div class="data">
 								<p class="user">
 									<strong> <a href="/profile">Nombre usuario: </a> </strong>
@@ -495,7 +566,9 @@
 							</div>
 						</article>
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<div class="icono-usuario-comentario">
+								<i class="far fa-user"></i>
+							</div>
 							<div class="data">
 								<p class="user">
 									<strong> <a href="/profile">Nombre usuario: </a> </strong>
@@ -534,7 +607,9 @@
 					<div class="col-12 col-lg-4">
 						<section class="comments">
 							<article>
-								<img src="https://via.placeholder.com/35" alt="">
+								<div class="icono-usuario-comentario">
+									<i class="far fa-user"></i>
+								</div>
 								<div class="data">
 									<p class="user">
 									<strong> <a href="/profile">Nombre usuario: </a> </strong>
@@ -542,7 +617,9 @@
 								</div>
 							</article>
 							<article>
-								<img src="https://via.placeholder.com/35" alt="">
+								<div class="icono-usuario-comentario">
+									<i class="far fa-user"></i>
+								</div>
 								<div class="data">
 									<p class="user">
 										<strong> <a href="/profile">Nombre usuario: </a> </strong>
@@ -550,7 +627,9 @@
 								</div>
 							</article>
 							<article>
-								<img src="https://via.placeholder.com/35" alt="">
+								<div class="icono-usuario-comentario">
+									<i class="far fa-user"></i>
+								</div>
 								<div class="data">
 									<p class="user">
 										<strong> <a href="/profile">Nombre usuario: </a> </strong>
@@ -559,7 +638,9 @@
 								</div>
 							</article>
 							<article>
-								<img src="https://via.placeholder.com/35" alt="">
+								<div class="icono-usuario-comentario">
+									<i class="far fa-user"></i>
+								</div>
 								<div class="data">
 									<p class="user">
 										<strong> <a href="/profile">Nombre usuario: </a> </strong>
@@ -567,7 +648,9 @@
 								</div>
 							</article>
 							<article>
-								<img src="https://via.placeholder.com/35" alt="">
+								<div class="icono-usuario-comentario">
+									<i class="far fa-user"></i>
+								</div>
 								<div class="data">
 									<p class="user">
 										<strong> <a href="/profile">Nombre usuario: </a> </strong>
@@ -606,7 +689,9 @@
 				<div class="col-12 col-lg-4">
 					<section class="comments">
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<div class="icono-usuario-comentario">
+								<i class="far fa-user"></i>
+							</div>
 							<div class="data">
 								<p class="user">
 								<strong> <a href="/profile">Nombre usuario: </a> </strong>
@@ -614,7 +699,9 @@
 							</div>
 						</article>
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<div class="icono-usuario-comentario">
+								<i class="far fa-user"></i>
+							</div>
 							<div class="data">
 								<p class="user">
 									<strong> <a href="/profile">Nombre usuario: </a> </strong>
@@ -622,7 +709,9 @@
 							</div>
 						</article>
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<div class="icono-usuario-comentario">
+								<i class="far fa-user"></i>
+							</div>
 							<div class="data">
 								<p class="user">
 									<strong> <a href="/profile">Nombre usuario: </a> </strong>
@@ -631,7 +720,9 @@
 							</div>
 						</article>
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<div class="icono-usuario-comentario">
+								<i class="far fa-user"></i>
+							</div>
 							<div class="data">
 								<p class="user">
 									<strong> <a href="/profile">Nombre usuario: </a> </strong>
@@ -639,7 +730,9 @@
 							</div>
 						</article>
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<div class="icono-usuario-comentario">
+								<i class="far fa-user"></i>
+							</div>
 							<div class="data">
 								<p class="user">
 									<strong> <a href="/profile">Nombre usuario: </a> </strong>
@@ -678,7 +771,9 @@
 					<div class="col-12 col-lg-4">
 						<section class="comments">
 							<article>
-								<img src="https://via.placeholder.com/35" alt="">
+								<div class="icono-usuario-comentario">
+									<i class="far fa-user"></i>
+								</div>
 								<div class="data">
 									<p class="user">
 									<strong> <a href="/profile">Nombre usuario: </a> </strong>
@@ -686,7 +781,9 @@
 								</div>
 							</article>
 							<article>
-								<img src="https://via.placeholder.com/35" alt="">
+								<div class="icono-usuario-comentario">
+									<i class="far fa-user"></i>
+								</div>
 								<div class="data">
 									<p class="user">
 										<strong> <a href="/profile">Nombre usuario: </a> </strong>
@@ -694,7 +791,9 @@
 								</div>
 							</article>
 							<article>
-								<img src="https://via.placeholder.com/35" alt="">
+								<div class="icono-usuario-comentario">
+									<i class="far fa-user"></i>
+								</div>
 								<div class="data">
 									<p class="user">
 										<strong> <a href="/profile">Nombre usuario: </a> </strong>
@@ -703,7 +802,9 @@
 								</div>
 							</article>
 							<article>
-								<img src="https://via.placeholder.com/35" alt="">
+								<div class="icono-usuario-comentario">
+									<i class="far fa-user"></i>
+								</div>
 								<div class="data">
 									<p class="user">
 										<strong> <a href="/profile">Nombre usuario: </a> </strong>
@@ -711,7 +812,9 @@
 								</div>
 							</article>
 							<article>
-								<img src="https://via.placeholder.com/35" alt="">
+								<div class="icono-usuario-comentario">
+									<i class="far fa-user"></i>
+								</div>
 								<div class="data">
 									<p class="user">
 										<strong> <a href="/profile">Nombre usuario: </a> </strong>
