cambios en products

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -111,7 +111,7 @@
 			<div class="product-detail">
 				<div class="row">
 					<article class="col-12 col-lg-8 product-detail-info">
-						<img src="/images/products/chila.jpg" alt="" class="product-detail-img">
+						<img src="/images/products/chila.jpeg" alt="" class="product-detail-img">
 						<p class="product-detail-description">
 							La cocina de este restaurante en igual medidas coqueto y vanguardista. Podés ir a probar su menú fijo de productos locales y de estación, con foco puesto en la identidad cultural argentina</p>
 					</article>
@@ -137,37 +137,7 @@
 										hemos ido varias veces con mi marido, la primera vez porque su chef inicial fue Soldad Nardeli, quien es una de mis preferidas, por su trayectoria en el rubro. siempre sorprenden con sus platos, tanto en la elaboración como la presentación. insuperables.</p>
 								</div>
 							</article>
-							<article>
-								<div class="icono-usuario-comentario">
-									<i class="far fa-user"></i>
-								</div>
-								<div class="data">
-									<p class="user">
-										<strong> <a href="/profile"> Bautista Sanchez </a> </strong>
-										La atencion fue mala, y la comida no es rica.
-										</p>
-								</div>
-							</article>
-							<article>
-								<div class="icono-usuario-comentario">
-									<i class="far fa-user"></i>
-								</div>
-								<div class="data">
-									<p class="user">
-										<strong> <a href="/profile"> Santos Chismech </a> </strong>
-										Comida impecable, muy bien lograda y la barra es excelente. La atención de los chicos es muy buena. Nosotros vamos seguido y lo seguiremos haciendo..</p>
-								</div>
-							</article>
-							<article>
-								<div class="icono-usuario-comentario">
-									<i class="far fa-user"></i>
-								</div>
-								<div class="data">
-									<p class="user">
-										<strong> <a href="/profile"> Miguel Prado </a> </strong>
-										Fui solo pero el lugar es tan acogedor y el personal tan servicial que nunca percibí mi soledad. Súper recomendable! El souffle de DDL imperdible.</p>
-								</div>
-							</article>
+							
 	
 						</section>
 						<form class="form" action="" method="POST">
@@ -391,28 +361,8 @@
 									</p>
 							</div>
 						</article>
-						<article>
-							<div class="icono-usuario-comentario">
-								<i class="far fa-user"></i>
-							</div>
-							<div class="data">
-								<p class="user">
-									<strong> <a href="/profile">Nombre usuario: </a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet.</p>
-							</div>
-						</article>
-						<article>
-							<	<div class="icono-usuario-comentario">
-								<i class="far fa-user"></i>
-							</div>
-							<div class="data">
-								<p class="user">
-									<strong> <a href="/profile">Nombre usuario: </a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit.
-									Tempora doloribus enim aspernatur fugit corrupti suscipit sit dolore</p>
-							</div>
-						</article>
-
+						
+						
 					</section>
 					<form class="form" action="" method="POST">
 						<input class="form-input" type="text" value="" placeholder="Agregar comentario">
