--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,12 +27,12 @@
 				<section class="product-box">
 					<a href="/product">
 						<figure class="product-box_image">
-							<img src="/images/products/alos.jpg" alt="cafetera moulinex">
+							<img src="/images/products/alos2.jpeg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Alo's</h2>
-							<p>Este moderno bistró, que abre para el desayuno, el almuerzo y la cena, se convirtió rápidamente en un éxito por su forma única de transformar los sabores argentinos familiares.</p>
-							<p>Comentarios: 12</p>
+							<h2>¡NUEVO RESTAURANTE!</h2>
+							<p>Conoce Alo's, no te lo pierdas!.</p>
+						
 						</article>
 					</a>
 				</section>
@@ -41,12 +41,12 @@
 				<section class="product-box">
 					<a href="/product">
 						<figure class="product-box_image">
-							<img src="/images/products/mudra.jpg" alt="cafetera moulinex">
+							<img src="/images/products/mudra3.jpeg" alt="c">
 						</figure>
 						<article class="product-box_data">
-							<h2>Mudra Plant Based</h2>
-							<p>Mudrá es una cocina vegana muy bien diseñada y ejecutada. La carta recorre todo tipo de platos: desde pizza y hamburguesas hasta sushi, pasando por pasta, tacos y pastelería..</p>
-							<p>Comentarios: 12</p>
+							<h2>2X1 en Mudra Plant Based</h2>
+							<p>2X1 todos los martes y jueves para el almuerzo.</p>
+						
 						</article>
 					</a>
 				</section>
@@ -55,12 +55,12 @@
 				<section class="product-box">
 					<a href="/product">
 						<figure class="product-box_image">
-							<img src="/images/products/dabbang.jpg" alt="cafetera moulinex">
+							<img src="/images/navidad-oferta.jpeg" alt="">
 						</figure>
 						<article class="product-box_data">
-							<h2>Niño Gordo</h2>
-							<p>Tal vez uno de los restaurantes de la lista más difíciles de encasillar. La comida tiene mucha influencia de platos y street food asiático, pero no es un restaurante asiático. Se siente bastante argentino.</p>
-							<p>Comentarios: 12</p>
+							<h2>¡cupon de $2000 de navidad!</h2>
+							<p>¡Registrate y te regalamos un cupon de $2000 para que uses en el restaurante que quieras!.</p>
+						
 						</article>
 					</a>
 				</section>
@@ -69,12 +69,12 @@
 				<section class="product-box">
 					<a href="/product">
 						<figure class="product-box_image">
-							<img src="/images/products/donjulio.jpg" alt="cafetera moulinex">
+							<img src="/images/products/donjulio2.jpeg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Don Julio</h2>
-							<p>La parrilla palermitana está en boca de todos, no solo porque tuvo el puesto más alto en la lista latina, sino que además, fue el único restaurant de nuestro país en integrar la lista mundial, en el puesto 34..</p>
-							<p>Comentarios: 12</p>
+							<h2 class="product-box-nombre">conoce la nueva sede!</h2>
+							<p>No te pierdas de conocer la nueva sede de este increible restaurante ubicado en Palermo.</p>
+						
 						</article>
 					</a>
 				</section>
