sede por sucursal

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,8 +72,8 @@
 							<img src="/images/products/donjulio2.jpeg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2 class="product-box-nombre">conoce la nueva sede!</h2>
-							<p>No te pierdas de conocer la nueva sede de este increible restaurante ubicado en Palermo.</p>
+							<h2 class="product-box-nombre">conoce la nueva sucursal!</h2>
+							<p>No te pierdas de conocer la nueva sucursal de este increible restaurante ubicado en Palermo.</p>
 						
 						</article>
 					</a>
